Allow null elements in EffectInput::Convert

By the spec, a KeyframeEffect may be created with a null target,
although unfortunately the spec doesn't then say what Document to use to
resolve style/etc. This CL adds null-target handling, falling back to
the Document extracted from the ScriptState if there is no target.

In terms of changes to tests:
  - Three WPT tests no longer timeout (woo), but unfortunately they
    currently crash on a DCHECK for setting transform-box to 'border-box'
    and so are still disabled. See http://crbug.com/816534
  - A number of tests for processing a keyframes argument start failing
    due to a bug in that code; previously this went unseen because the
    tests pass null for the element.

Bug: 772014, 816534
Change-Id: I01502c82bf758a796fe83c87ed395c6b9f6c4e11
Reviewed-on: https://chromium-review.googlesource.com/934625
Commit-Queue: Stephen McGruer <smcgruer@chromium.org>
Reviewed-by: Robert Flack <flackr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539509}
Former-commit-id: 2a4de97d98d814d010155ca0a9ee5fad035eaec4