third_party/WebKit/Source/core/animation/AnimationInputHelpers.h
@@ -26,9 +26,9 @@ class CORE_EXPORT AnimationInputHelpers {
   static CSSPropertyID KeyframeAttributeToCSSProperty(const String&,
                                                       const Document&);
   static CSSPropertyID KeyframeAttributeToPresentationAttribute(const String&,
-                                                                const Element&);
+                                                                const Element*);
   static const QualifiedName* KeyframeAttributeToSVGAttribute(const String&,
-                                                              Element&);
+                                                              Element*);
   static scoped_refptr<TimingFunction> ParseTimingFunction(const String&,
                                                            Document*,
                                                            ExceptionState&);
